--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -91,8 +91,8 @@
 
       {% if author.google_plus %}
         <li>
-          <a href="https://plus.google.com/{{ author.google_plus }}" itemprop="sameAs">
-            <i class="fab fa-fw fa-google-plus-square" aria-hidden="true"></i> Google+
+          <a href="https://scholar.google.com/{{ author.google_plus }}" itemprop="sameAs">
+            <i class="fab fa-fw fa-google-plus-square" aria-hidden="true"></i> Google Scholar
           </a>
         </li>
       {% endif %}
