--- a/_includes/company_logos.liquid
+++ b/_includes/company_logos.liquid
@@ -42,52 +42,68 @@
   </style>
 
   <div class="company-logo-container">
-    <img
-      class="company-logo"
-      src="{{ '/assets/img/companies/deepmind_resize.png' | relative_url }}"
-      alt="Company 1">
+    <a href="https://deepmind.com" target="_blank" rel="noopener noreferrer">
+      <img
+        class="company-logo"
+        src="{{ '/assets/img/companies/deepmind_resize.png' | relative_url }}"
+        alt="DeepMind">
+    </a>
   </div>
   <div class="company-logo-container">
+    <a href="https://research.google/teams/perception/" target="_blank" rel="noopener noreferrer">
     <img
       class="company-logo"
       src="{{ '/assets/img/companies/google_resize.png' | relative_url }}"
       alt="Company 2">
+    </a>
   </div>
   <div class="company-logo-container">
+    <a href="https://is.mpg.de/" target="_blank" rel="noopener noreferrer">
     <img
       class="company-logo"
       src="{{ '/assets/img/companies/max_planck_resize.png' | relative_url }}"
       alt="Company 3">
+    </a>
   </div>
   <div class="company-logo-container">
+    <a href="https://www.ed.ac.uk/" target="_blank" rel="noopener noreferrer">
     <img
       class="company-logo"
       src="{{ '/assets/img/companies/edinburgh_resize.png' | relative_url }}"
       alt="Company 8">
+    </a>
   </div>
   <div class="company-logo-container">
+    <a href="https://www.tum.de/en/" target="_blank" rel="noopener noreferrer">
     <img
       class="company-logo"
       src="{{ '/assets/img/companies/tum_resize.png' | relative_url }}"
       alt="Company 4">
+    </a>
   </div>
   <div class="company-logo-container">
+    <a href="https://uni-tuebingen.de/en/" target="_blank" rel="noopener noreferrer">
     <img
       class="company-logo"
       src="{{ '/assets/img/companies/tubingen_resize.png' | relative_url }}"
       alt="Company 6">
+    </a>
   </div>
   <div class="company-logo-container">
+    <a href="https://www.helmholtz-munich.de/en" target="_blank" rel="noopener noreferrer">
     <img
       class="company-logo"
       src="{{ '/assets/img/companies/helmholtz_resize.png' | relative_url }}"
       alt="Company 5">
+    </a>
   </div>
   <div class="company-logo-container">
+    <a href="https://everseen.com/" target="_blank" rel="noopener noreferrer">
     <img
       class="company-logo"
       src="{{ '/assets/img/companies/everseen_resize.jpeg' | relative_url }}"
       alt="Company 7">
+    </a>
   </div>
   <br>
 </div>
