--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -189,6 +189,11 @@
           {%- if entry.award_name %}{{ entry.award_name }}{% else %}Awarded{% endif -%}
         </a>
       {% endif %}
+       {% if entry.cited_by %}
+        <a class="award btn btn-sm z-depth-0" role="button">
+          Top Citing Institutions
+        </a>
+      {% endif %}
       {% if entry.abstract %}
         <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
       {% endif %}
@@ -352,6 +357,13 @@
       <!-- Hidden Award block -->
       <div class="award hidden d-print-inline">
         <p>{{ entry.award | markdownify }}</p>
+      </div>
+    {% endif %}
+
+    {% if entry.cited_by %}
+      <!-- Hidden cited_by block -->
+      <div class="award hidden d-print-inline">
+        <p>{{ entry.cited_by | markdownify }}</p>
       </div>
     {% endif %}
 
