--- a/_includes/company_logos.liquid
+++ b/_includes/company_logos.liquid
@@ -42,6 +42,15 @@
   </style>
 
   <div class="company-logo-container">
+    <a href="https://machinelearning.apple.com/" target="_blank" rel="noopener noreferrer">
+      <img
+        class="company-logo"
+        src="{{ '/assets/img/companies/apple.png' | relative_url }}"
+        alt="Apple">
+    </a>
+  </div>
+
+  <div class="company-logo-container">
     <a href="https://deepmind.com" target="_blank" rel="noopener noreferrer">
       <img
         class="company-logo"
@@ -95,14 +104,6 @@
       class="company-logo"
       src="{{ '/assets/img/companies/helmholtz_resize.png' | relative_url }}"
       alt="Company 5">
-    </a>
-  </div>
-  <div class="company-logo-container">
-    <a href="https://everseen.com/" target="_blank" rel="noopener noreferrer">
-    <img
-      class="company-logo"
-      src="{{ '/assets/img/companies/everseen_resize.jpeg' | relative_url }}"
-      alt="Company 7">
     </a>
   </div>
   <br>
