--- a/_includes/company_logos.liquid
+++ b/_includes/company_logos.liquid
@@ -42,7 +42,7 @@
   </style>
 
   <div class="company-logo-container">
-    <a href="https://machinelearning.apple.com/" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.apple.com/careers/uk/teams/software-and-services.html" target="_blank" rel="noopener noreferrer">
       <img
         class="company-logo"
         src="{{ '/assets/img/companies/apple.png' | relative_url }}"
