--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -5,7 +5,7 @@
   crossorigin="anonymous"
 ></script>
 
-<!-- Bootsrap & MDB scripts -->
+<!-- Bootstrap & MDB scripts -->
 <script src="{{ '/assets/js/bootstrap.bundle.min.js' | relative_url }}"></script>
 <script
   src="{{ site.third_party_libraries.mdb.url.js }}"
@@ -46,7 +46,11 @@
       crossorigin="anonymous"
     ></script>
   {% endif %}
-  <script defer src="{{ '/assets/js/mermaid-setup.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+  <script
+    defer
+    src="{{ '/assets/js/mermaid-setup.js' | relative_url | bust_file_cache }}"
+    type="text/javascript"
+  ></script>
 {% endif %}
 
 {% if page.code_diff %}
@@ -57,7 +61,11 @@
     integrity="{{ site.third_party_libraries.diff2html.integrity.js }}"
     crossorigin="anonymous"
   ></script>
-  <script defer src="{{ '/assets/js/diff2html-setup.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+  <script
+    defer
+    src="{{ '/assets/js/diff2html-setup.js' | relative_url | bust_file_cache }}"
+    type="text/javascript"
+  ></script>
 {% endif %}
 
 {% if page.map %}
@@ -67,7 +75,11 @@
     integrity="{{ site.third_party_libraries.leaflet.integrity.js }}"
     crossorigin="anonymous"
   ></script>
-  <script defer src="{{ '/assets/js/leaflet-setup.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+  <script
+    defer
+    src="{{ '/assets/js/leaflet-setup.js' | relative_url | bust_file_cache }}"
+    type="text/javascript"
+  ></script>
 {% endif %}
 
 {% if page.chart and page.chart.chartjs %}
@@ -78,7 +90,11 @@
     integrity="{{ site.third_party_libraries.chartjs.integrity.js }}"
     crossorigin="anonymous"
   ></script>
-  <script defer src="{{ '/assets/js/chartjs-setup.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+  <script
+    defer
+    src="{{ '/assets/js/chartjs-setup.js' | relative_url | bust_file_cache }}"
+    type="text/javascript"
+  ></script>
 {% endif %}
 
 {% if page.chart and page.chart.echarts %}
@@ -95,7 +111,11 @@
       crossorigin="anonymous"
     ></script>
   {% endif %}
-  <script defer src="{{ '/assets/js/echarts-setup.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+  <script
+    defer
+    src="{{ '/assets/js/echarts-setup.js' | relative_url | bust_file_cache }}"
+    type="text/javascript"
+  ></script>
 {% endif %}
 
 {% if page.chart and page.chart.vega_lite %}
@@ -239,7 +259,11 @@
 
 {% if site.enable_progressbar %}
   <!-- Scrolling Progress Bar -->
-  <script defer src="{{ '/assets/js/progress-bar.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+  <script
+    defer
+    src="{{ '/assets/js/progress-bar.js' | relative_url | bust_file_cache }}"
+    type="text/javascript"
+  ></script>
 {% endif %}
 
 {% if page.images %}
@@ -285,7 +309,11 @@
       integrity="{{ site.third_party_libraries.venobox.integrity.js }}"
       crossorigin="anonymous"
     ></script>
-    <script defer src="{{ '/assets/js/venobox-setup.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+    <script
+      defer
+      src="{{ '/assets/js/venobox-setup.js' | relative_url | bust_file_cache }}"
+      type="text/javascript"
+    ></script>
   {% endif %}
 {% endif %}
 
